--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ﻿----------------------------
+-- 2020.10.04
+----------------------------
+-- 包裝 GetSpellDurationByDesc() 到 Lib_ZYF
+----------------------------
 -- 2020.08.23
 ----------------------------
 --修復術士靈魂碎片及碎塊顯示問題
