--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,22 @@
 ﻿----------------------------
+-- 2020.10.18
+----------------------------
+-- 變更秘法充能圖案
+-- 修正術士報錯
+-- DK 增加可用符文數量顯示,若達6個可用符文則高亮
+-- DK 可透過/eam ShowRunesBar 切換顯示符文列
+----------------------------
+-- 2020.10.17
+----------------------------
+-- 修復真氣顯示
+-- 修復坦DH資源顯示(魔痛)
+-- 暗牧瘋狂值達到瘟疫需求值50高亮
+-- 狂戰怒氣達到暴怒需求值80高亮
+-- 武戰怒氣達到斬殺最大傷害需求值40高亮
+-- 防戰怒氣達到無視苦痛需求值40高亮
+-- 平衡德魯伊星能達到星隕術需求值50高亮
+-- 加大字體(須調整圖示大小才會跟著調整字體大小)
+----------------------------
 -- 2020.10.04
 ----------------------------
 -- 包裝 GetSpellDurationByDesc() 到 Lib_ZYF
