--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,19 @@
-﻿-- 變更DK符文圖案,使其符合版本
+﻿----------------------------
+-- 2020.11.17
+----------------------------
+-- 變更法術細部設定背景透明度,使其不與其他框架干擾
+-- 修正法術細部設定法術文字綠色背景問題
+-- 修正:啟用ESC關閉提示功能時,ESC無法關閉框架問題,
+   另技能提醒的部份仍不受ESC關閉,且ESC將成為顯示開
+   關,按一次關、按一次開, 並可戰鬥中開關
+----------------------------
+-- 2020.11.03
+----------------------------
+-- 修正DK符文報錯
+----------------------------
+-- 2020.11.01
+----------------------------
+-- 變更DK符文圖案,使其符合版本
 -- 符文數量會顯示專精,例如:穢邪符文、冰霜符文、血魄符文
 -- 字型基礎大小值改為自訂, 不再跟隨圖示大小縮放
    可輸入 /eam BaseFontSize nSize 自訂大小
