--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,73 @@
 ﻿----------------------------
+-- 2020.12.26
+----------------------------
+-- 惡魔獵人復仇專精與災虐專精統一使用魔怒(Fury)資源,魔痛(Pain)已不再使用
+-- 條件技能內請勿再使用魔痛
+-- 德魯伊時將連擊點數放第一格,能量放第二格,怒氣放第三格
+-- 德魯伊平衡專精時將星能改放在第一格,連擊點數放第四格
+-- 修正切換專精時連擊點數資源不更新的問題
+-- ShowAuraValueWhenOver預設值改為10
+----------------------------
+-- 2020.11.17
+----------------------------
+-- 變更法術細部設定背景透明度,使其不與其他框架干擾
+-- 修正法術細部設定法術文字綠色背景問題
+-- 修正:啟用ESC關閉提示功能時,ESC無法關閉框架問題,
+   另技能提醒的部份仍不受ESC關閉,且ESC將成為顯示開
+   關,按一次關、按一次開, 並可戰鬥中開關
+----------------------------
+-- 2020.11.03
+----------------------------
+-- 修正DK符文報錯
+----------------------------
+-- 2020.11.01
+----------------------------
+-- 變更DK符文圖案,使其符合版本
+-- 符文數量會顯示專精,例如:穢邪符文、冰霜符文、血魄符文
+-- 字型基礎大小值改為自訂, 不再跟隨圖示大小縮放
+   可輸入 /eam BaseFontSize nSize 自訂大小
+   而計時、堆疊、名稱將以這個基礎值做框外或框內等比例縮放
+   有興趣者可以到EventAlert_IconOptions.lua 找函數
+   EventAlert_Icon_Options_Frame_AdjustTimerFontSize自行修改
+   首次執行預設值為26
+-- 斬殺動畫...調整, 並且可以/eam play 播放
+-- 新增及增加Minimap齒輪的滑鼠提示輔助說明
+
+----------------------------
+-- 2020.10.26
+----------------------------
+-- 修復連擊點高亮, 並一律以最大值高亮(依專精天賦可能不同)
+-- 修復獵人寵物集中值高亮,並預設50高亮,
+   可配合手動施放寵物傷害技能時,最大化傷害.
+-- FontObject(EA_FONT_OBJECT) 儘可能以"TextStatusBarText"為主,
+   否則以"ChatFontNoramal"為主
+-- Font (EA_Fonts) 拉取系統預設值 STANDARD_TEXT_FONT, 
+   以/dump STANDARD_TEXT_FONT 可能因語系出現不同標準字型檔
+-- 以上兩項可於 EventAlertMod_InitVar.lua進行修改  
+-- 將大部分框架層級由HIGH降至MEDIUM ,嘗試減少與其他框架遮擋現象 
+-- 圖示大小每次滑動調整值由5改為1
+-- 當偵測OmniCC被載入且EAM也啟用倒數陰影功能時, 強制關閉EAM的倒數陰影
+   避免被OmniCC攔截顯示造成干擾   
+   
+----------------------------
+-- 2020.10.18
+----------------------------
+-- 變更秘法充能圖案
+-- 修正術士報錯
+-- DK 增加可用符文數量顯示,若達6個可用符文則高亮
+-- DK 可透過/eam ShowRunesBar 切換顯示符文列
+----------------------------
+-- 2020.10.17
+----------------------------
+-- 修復真氣顯示
+-- 修復坦DH資源顯示(魔痛)
+-- 暗牧瘋狂值達到瘟疫需求值50高亮
+-- 狂戰怒氣達到暴怒需求值80高亮
+-- 武戰怒氣達到斬殺最大傷害需求值40高亮
+-- 防戰怒氣達到無視苦痛需求值40高亮
+-- 平衡德魯伊星能達到星隕術需求值50高亮
+-- 加大字體(須調整圖示大小才會跟著調整字體大小)
+----------------------------
 -- 2020.10.04
 ----------------------------
 -- 包裝 GetSpellDurationByDesc() 到 Lib_ZYF
